# servify

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  fake-main.rs  readme.md
.github/workflows/: docker-image.yml
src/: main.rs
