[package]
name = "servify"
version = "0.1.0"
authors = ["Juan Eugenio Abadie <juaneabadie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Run any command as a service."
homepage = "https://github.com/whoan/servify"
repository = "https://github.com/whoan/servify"
readme = "readme.md"
keywords = ["rest", "rest-api", "cli"]

[dependencies]
rustless = "0.10.0"
clap = "2.33"
jsonway = "1"
tempfile = "3"
base64 = "0.11.0"

[dependencies.iron]
version = "0.4.0"
